--- a/apps/extension/public/manifest.json
+++ b/apps/extension/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Oko Wallet",
+  "name": "Scalia Wallet",
   "description": "Multichain wallet. In-app yield farming, swaps, and staking. Manage your tokens and NFTs in one place.",
   "version": "1.0",
   "manifest_version": 3,
@@ -12,8 +12,12 @@
   },
   "content_scripts": [
     {
-      "js": ["scripts/content-script.js"],
-      "matches": ["<all_urls>"],
+      "js": [
+        "scripts/content-script.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ],
       "run_at": "document_start"
     }
   ],
@@ -24,7 +28,9 @@
     "scripting",
     "storage"
   ],
-  "host_permissions": ["<all_urls>"],
+  "host_permissions": [
+    "<all_urls>"
+  ],
   "icons": {
     "16": "mics/logo16.png",
     "48": "mics/logo48.png",
