--- a/apps/mobile/ios/KlaytnWallet/Info.plist
+++ b/apps/mobile/ios/KlaytnWallet/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Oko Wallet</string>
+	<string>Scalia Wallet</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
