--- a/libs/ui/package.json
+++ b/libs/ui/package.json
@@ -32,14 +32,17 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-hook-form": "^7.41.5",
+    "react-hooks-global-state": "^2.1.0",
     "react-native": "^0.71.1",
     "react-native-bootsplash": "^4.4.0",
     "react-native-config": "^1.4.11",
     "react-native-device-info": "^10.3.0",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-haptic-feedback": "^1.14.0",
+    "react-native-modal": "^13.0.1",
     "react-native-qrcode-svg": "^6.1.2",
     "react-native-safe-area-context": "^4.4.1",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-svg": "^13.7.0",
     "react-native-themis": "^0.14.11",
     "react-native-toast-notifications": "^3.3.1",
